--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ extras/packager/output/
 extras/packager/tmp/
 /output.csv
 /report/output/
+/report/input/categories.csv
+/report/input/output.csv
